--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="links"> <a href="www.github.com/karinabentancor"> GitHub </a> 
         <br>
-        <a href="www.linkedin.com/in/karinabentancor"> LinkedIn </a>
+        <a class ="bi--linkedin" href="www.linkedin.com/in/karinabentancor"> LinkedIn </a>
       </div>
     <br>
     <br>
