--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>   karina bentancor  </title>
     <link rel= stylesheet href="style_3.3.1.css">
+    
 </head>
 <body>
 
@@ -20,7 +21,7 @@
         based in montevideo-uruguay </p>  
       </div>
 
-      <div class="links"> <a href="www.github.com/karinabentancor"> GitHub </a> 
+      <div > <a class="bi--github" href="www.github.com/karinabentancor"> GitHub </a> 
         <br>
         <a class ="bi--linkedin" href="www.linkedin.com/in/karinabentancor"> LinkedIn </a>
       </div>
