--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>   karina bentancor  </title>
     <link rel= stylesheet href="style_3.3.1.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -22,6 +22,8 @@
       </div>
 
       <div > <a class="bi--github" href="www.github.com/karinabentancor"> GitHub </a> 
+        <a href="https://github.com/karinabentancor" class="github-icon" target="_blank">
+          <i class="fab fa-github"></i>
         <br>
         <a class ="bi--linkedin" href="www.linkedin.com/in/karinabentancor"> LinkedIn </a>
       </div>
