--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         based in montevideo-uruguay </p>  
       </div>
 
-      <div > <a class="bi--github" href="www.github.com/karinabentancor"> GitHub </a> 
-        <a href="https://github.com/karinabentancor" class="github-icon" target="_blank">
+      <div > <a class="bi--github" href="www.github.com/karinabentancor"></a> 
+        <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
           <i class="fab fa-github"></i>
         <br>
-        <a class ="bi--linkedin" href="www.linkedin.com/in/karinabentancor"> LinkedIn </a>
+        <br>
+        <a class ="linkedin-icon" href="www.linkedin.com/in/karinabentancor"></a>
       </div>
     <br>
     <br>
