--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <div class="content">
-    <img src= "foto.jpg" class= "picture" alt="" />
+  <div class="image">
+    <img src= "foto.jpg" class= "picture" alt="photography" />
 </div>
 
     <h2> karina bentancor </h2>
@@ -26,7 +26,8 @@
           <i class="fab fa-github"></i>
         <br>
         <br>
-        <a class ="linkedin-icon" href="www.linkedin.com/in/karinabentancor"></a>
+        <a class ="linkedin-icon" href="www.linkedin.com/in/karinabentancor"></a> 
+        <a class="linkedinIcon" href="linkedin.com/in/karinabentancor" target="_blan"></a>
       </div>
     <br>
     <br>
