--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-        <div class="image">
+        <div class="container">
             <img src= "foto.jpg" class= "picture" alt="photography" />
         </div>
-
     <h2> karina bentancor </h2>
-  
-
+    <div>
+      <p class="info"> web developer in training 
+          <br>
+          based in montevideo-uruguay </p>  
+        </div>
       <div class="icons"> <a class="bi--github" href="www.github.com/karinabentancor"></a> 
         <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
           <i class="fab fa-github"></i>
         <a class ="linkedin-icon" href="www.linkedin.com/in/karinabentancor"></a> 
         <a class="linkedinIcon" href="linkedin.com/in/karinabentancor" target="_blan"></a>
       </div>
-
-      <div>
-        <p class="info"> web developer in training 
-            <br>
-            based in montevideo-uruguay </p>  
-          </div>
-
+   
     <form id="contact-form" action="#" method="POST" enctype="multipart/form-data">
       <hr>
       <br>
