--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="icons"> <a class="bi--github" href="www.github.com/karinabentancor"></a> 
         <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
           <i class="fab fa-github"></i>
-        <a class ="linkedin-icon" href="www.linkedin.com/in/karinabentancor"></a> 
-        <a class="linkedinIcon" href="linkedin.com/in/karinabentancor" target="_blan"></a>
+        <a class ="linkedin-icon" href="https://www.linkedin.com/in/karinabentancor/"></a> 
+        <a class="linkedinIcon" href="https://www.linkedin.com/in/karinabentancor/" target="_blan"></a>
       </div>
       
     <form id="contact-form" action="#" method="POST" enctype="multipart/form-data">
