--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img src= "foto.jpg" class= "picture" alt="photography" />
         </div>
-    <h2> karina bentancor </h2>
+    <h2 class="col-12 col-md-6 col-lg-4"> karina bentancor</h2>
     <div>
       <p class="info"> web developer in training 
           <br>
