--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="container">
             <img src= "foto.jpg" class= "picture" alt="photography" />
         </div>
+
     <h2 class="col-12 col-md-6 col-lg-4"> karina bentancor</h2>
     <div>
       <p class="info"> web developer in training 
@@ -21,9 +22,10 @@
       <div class="icons"> <a class="bi--github" href="www.github.com/karinabentancor"></a> 
         <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
           <i class="fab fa-github"></i>
+          </div>
           <br>        
           <br>
-          <a class ="linkedin-icon" href="https://www.linkedin.com/in/karinabentancor/"></a> 
+          <div><a class ="linkedin-icon" href="https://www.linkedin.com/in/karinabentancor/"></a> 
         <a class="linkedinIcon" href="https://www.linkedin.com/in/karinabentancor/" target="_blan"></a>
       </div>
       
