--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src= "foto.jpg" class= "picture" alt="photography" />
         </div>
 
-    <h2 class="col-12 col-md-6 col-lg-4"> karina bentancor</h2>
+    <h2 class="name"> karina bentancor</h2>
     <div>
       <p class="info"> web developer in training 
           <br>
