--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
         </div>
         <hr>
       <div class="icons"> <a class="bi--github" href="www.github.com/karinabentancor"></a> 
-        <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
+          <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
           <i class="fab fa-github"></i>
-          </div>
-          <br>        
-          <br>
-          <div><a class ="linkedin-icon" href="https://www.linkedin.com/in/karinabentancor/"></a> 
-        <a class="linkedinIcon" href="https://www.linkedin.com/in/karinabentancor/" target="_blan"></a>
+          <a class ="linkedin-icon" href="https://www.linkedin.com/in/karinabentancor/"></a> 
+          <a class="linkedinIcon" href="https://www.linkedin.com/in/karinabentancor/" target="_blan"></a>
       </div>
-      
+          <br>        
       <div class="form">
     <form id="contact-form" action="#" method="POST" enctype="multipart/form-data">
       <h3> contact </h3>
