--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <div class="photo">
             <img src= "foto.jpg" class= "picture" alt="photography" />
         </div>
-
+<div class="text-container">
     <h2 class="name"> karina bentancor</h2>
     <div>
       <p class="info"> web developer in training 
           <br>
           based in montevideo-uruguay </p>  
         </div>
+      </div>
         <hr>
       <div class="icons"> <a class="bi--github" href="www.github.com/karinabentancor"></a> 
           <a class="github-icon" href="https://github.com/karinabentancor" target="_blank">
